# LocalFeed

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  fetch.rs  images.rs  lib.rs  main.rs  search.rs
src/components/: ArticleList.tsx  ReadingPane.tsx  SettingsModal.tsx  Sidebar.tsx
src/lib/: backend.ts  i18n.ts  sanitize.ts  search.ts  types.ts
src/lib/__tests__/: sanitize.test.ts  search.test.ts
src/state/: store.ts  ui.ts
